--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,24 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -64,7 +82,7 @@ web_modules/
 .rts2_cache_umd/
 
 # Optional REPL history
-.node_repl_history
+.node_repl_hist
 
 # Output of 'npm pack'
 *.tgz
