--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
